# sda

./: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  SDAConfig.cmake.in  SDAGenerateConfig.cmake
sda/: backend_interface.hpp  backends.hpp  numerics_helpers.hpp  spa.hpp  spa_affiliations_solver_policy.hpp
sda/backends/: eigen_backend.hpp  eigen_type_traits.hpp
test/: CMakeLists.txt  comparison_helpers.hpp  test_eigen_backend.cpp  test_spa.cpp
